--- a/Studienarbeit/abstract.tex
+++ b/Studienarbeit/abstract.tex
@@ -8,5 +8,5 @@ Diese Studienarbeit handelt von der Entwicklung eines Frameworks automatisierter
 
 \renewcommand{\abstractname}{Summary}
 \begin{abstract}
-This seminar paper is about the development of a test framework for the game engine Unity. In the context of a previous seminar paper had been tested, how to develop a game test driven. It turned out, that it's hard to test the compoments that define the behaviour of a game, without adapting the development for testability. For this reason I want to develop my own framework, which has more possibilites. At first I'll explain the different types of tests. Then I analyse the existing test frameworks and discribe a first design for my framework. Finally I present the concrete implementation and I give an outlook for future features.
+This seminar paper is about the development of a test framework for the game engine Unity. In the context of a previous seminar paper had been tested, how to develop a game test driven. It turned out, that it's hard to test the compoments that define the behaviour of a game, without adapting the development for testability. For this reason I want to develop my own framework, which has more possibilites. At first I'll explain the different types of tests. Then I analyse the existing test frameworks and discribe a first design for my framework. Finally I present the concrete implementation and give an outlook for future features.
 \end{abstract}
