--- a/Studienarbeit/content/Einleitung.tex
+++ b/Studienarbeit/content/Einleitung.tex
@@ -1,9 +1,9 @@
 \chapter{Einleitung}
 \label{sec:Einleitung}
 
-In der Software-Entwicklung wird immer mehr Wert auf automatisierte Tests, um die Korrektheit des Programms zu gewährleisten und für die klassische Entwicklung gibt es schon mächtige Werkzeuge, die einen dabei unterstützen. Angefangen mit Test-Frameworks, welche es einem ermöglichen atomare Teile des Codes, bis zu dessen Gesamtheit automatisch zu testen, wodurch man schnelles Feedback erhält und Fehlverhalten leicht aufdecken kann. Darüber hinaus lässt sich mit Code Coverage Analysen feststellen, welche Teile des Codes durch Tests abgedeckt sind. Die Verwendung von Mocking-Frameworks ermöglicht es \textit{Mocks} (\hyperlink{DefinitionMock}{s. Unit-Tests weiter unten}) dynamisch zu erzeugen und deren Verhalten zur Laufzeit zu definieren. Dadurch lassen sich ohne viel Aufwand Teile des Codes komplett isoliert testen. Die testgetriebene Entwicklung stützt sich vollständig auf Tests, indem man zuerst den Test für die neue Funktionalität schreibt, diesen zum Durchlaufen bringen und anschließend refactored. Dadurch erhält man nahezu vollständig durch Tests abgedeckten Code, der offen für Änderungen und robust gegen Fehler ist. Mehr über TDD findet sich in \cite{FRE10}.
+In der Software-Entwicklung wird immer mehr Wert auf automatisierte Tests gelegt, um die Korrektheit des Programms zu gewährleisten und für die klassische Entwicklung gibt es schon mächtige Werkzeuge, die einen dabei unterstützen. Angefangen mit Test-Frameworks, welche es einem ermöglichen atomare Teile des Codes, bis zu dessen Gesamtheit automatisch zu testen, wodurch man schnelles Feedback erhält und Fehlverhalten leicht aufdecken kann. Darüber hinaus lässt sich mit Code Coverage Analysen feststellen, welche Teile des Codes durch Tests abgedeckt sind. Die Verwendung von Mocking-Frameworks ermöglicht es \textit{Mocks} (\hyperlink{DefinitionMock}{s. Unit-Tests weiter unten}) dynamisch zu erzeugen und deren Verhalten zur Laufzeit zu definieren. Dadurch lassen sich ohne viel Aufwand Teile des Codes komplett isoliert testen. Um eine möglichst große und sinnvolle Testabdeckung zu erreichen, sind völlig neue Arten zu entwickeln entstanden. Eine davon ist die testgetriebene Entwicklung (oder kurz TDD), welche sich vollständig auf Tests stützt. Dabei schreibt man zuerst den Test für die neue Funktionalität, bringt diesen zum Durchlaufen und räumt den Code auf. Dadurch erhält man nahezu vollständig durch Tests abgedeckten Code, der offen für Änderungen und robust gegen Fehler ist. Mehr über TDD findet sich in \cite{FRE10}.
 
-Für die Spiele-Entwicklung (mit Unity) gibt es noch keine oder nur sehr einfache Werkzeuge, um seinen Code effektiv zu testen. Deswegen möchte ich in dieser Studienarbeit ein eigenes Framework entwickeln, mit dem sich die verhaltenssteuernden Komponenten eines Spiels testen lassen. Dabei stütze ich mich auf die Erkenntnisse die ich mit einem Kommilitonen in einer vorherigen Studienarbeit \cite{TDGD13} gewonnen habe. Vor allem die Kapitel über die unterschiedlichen \nameref{sec:Testarten}, die Funktionsweise von \nameref{sec:Unity} und wie man aktuell \nameref{sec:Tests mit Unity} mit den vorhandenen Test-Frameworks durchführen kann, sind inhaltlich sehr ähnlich zu der vorangegangenen Arbeit. Dennoch möchte ich diese auf Grund der Nähe zum Thema dieser Arbeit nochmals aufführen.\\
+Für die Spiele-Entwicklung (mit Unity) gibt es noch keine oder nur sehr einfache Werkzeuge, um seinen Code effektiv zu testen. Deswegen möchte ich in dieser Studienarbeit ein eigenes Framework entwickeln, mit dem sich die verhaltenssteuernden Komponenten eines Spiels testen lassen. Dabei stütze ich mich auf die Erkenntnisse die ich mit einem Kommilitonen in der vorherigen Studienarbeit \cite{TDGD13} gewonnen habe. Insbesondere die Kapitel über die unterschiedlichen \nameref{sec:Testarten}, die Funktionsweise von \nameref{sec:Unity} und wie man aktuell \nameref{sec:Tests mit Unity} mit den vorhandenen Test-Frameworks testen kann, sind inhaltlich ähnlich zu der vorangegangenen Arbeit. Dennoch möchte ich diese auf Grund der Nähe zum Thema dieser Arbeit nochmals aufführen.\\
 Obwohl es bereits Frameworks für Unity gibt, habe ich mich dazu entschieden von Grund auf ein neues zu entwickeln welches den Titel \textit{JUUT} (\textbf{J}ust \textbf{U}nity \textbf{U}nit-\textbf{T}ests) tragen wird. Zum einen, um zu erfahren wie schwer es ist ein Test-Framework (für Unity) selbst zu schreiben und zum anderen, um dessen Struktur besser auf meine Bedürfnisse anzupassen.
 
 Im nachfolgenden werde ich zunächst die unterschiedlichen Arten von Tests beschreiben und auf die Funktionsweise von Unity eingehen. Anschließend gebe ich einen Einblick in meine Entwicklungsumgebung.
@@ -101,14 +101,14 @@ Die Umgebung erlaubt es einem, die Spiele auch auf andere Plattformen zu portier
 \subsection{Unity als Entwicklungsumgebung} 
 
 Im Mittelpunkt steht ein Szeneneditor, der es ermöglicht die einzelnen Spielszenen zu gestalten, indem die Spielelemente in einem 3D-Editor so angeordnet werden, wie sie im späteren Spiel zu sehen sind. 
-Ein Element in einer Szene wird dabei \textit{GameObject} genannt, die Elemente, die zum Einbau bereit stehen, nennt man \textit{Assets}. Ein \textit{Asset} kann dabei vieles sein: Zum Beispiel 3D-Models (\textit{Meshes}), Skripte, Texturen oder Audio-Dateien. \textit{GameObjects} lassen sich beliebig hierarchisch anordnen, um sie so zu gruppieren, oder logisch zu strukturieren. Ihnen können sogenannte \textit{Components} zugeordnet werden, welche die Eigenschaften und das Verhalten dieses Objektes beschreiben. So muss immer ein \textit{Transform}-Komponente vorhanden sein, das die Position in der Welt, sowie die Rotation und die Skalierung beschreibt. Komponenten können auch Skripte sein, die bei jedem Frame für dieses \textit{GameObject} ausgeführt werden und auf Spielereingaben oder Events reagieren. Ein Event könnte zum Beispiel eine Kollision mit einem anderen \textit{GameObject} sein, ein Mausklick und vieles andere sein. Wie dies technisch umgesetzt ist, wird später erläutert.
+Ein Element in einer Szene wird dabei \textit{GameObject} genannt, die Elemente, die zum Einbau bereit stehen, nennt man \textit{Assets}. Ein \textit{Asset} kann dabei vieles sein: Zum Beispiel 3D-Models (\textit{Meshes}), Skripte, Texturen oder Audio-Dateien. \textit{GameObjects} lassen sich beliebig hierarchisch anordnen, um sie so zu gruppieren, oder logisch zu strukturieren. Ihnen können sogenannte \textit{Components} zugeordnet werden, welche die Eigenschaften und das Verhalten dieses Objektes beschreiben. So muss immer ein \textit{Transform}-Komponente vorhanden sein, das die Position in der Welt, sowie die Rotation und die Skalierung beschreibt. Komponenten können auch Skripte sein, die bei jedem Frame für dieses \textit{GameObject} ausgeführt werden und auf Spielereingaben oder Events reagieren. Ein Event ist zum Beispiel eine Kollision mit einem anderen \textit{GameObject}, ein Mausklick oder vieles andere. Wie dies technisch umgesetzt ist, wird später erläutert.
 
-Mit integriert in die Unity-Umgebung ist Mono-Develop, eine alternative Entwicklungsumgebung für .NET-Sprachen, welche man direkt aus Unity aufrufen kann. Die Engine bietet die Möglichkeit, das Spiel direkt aus dem Editor übersetzen zu lassen. Dies kann mit einem richtig Build geschehen, allerdings auch für Testzwecke direkt im Editor. Dabei wird aus dem 3D-Viewport einfach die Spieleansicht. Das eignet sich gut für ein schnelles Ausprobieren der Szene, ist allerdings durch eine auf Debugging ausgelegte Kompilierung nicht so schnell, wie der endgültige Build. Am Ende sind die Skripte in einer eigenen .NET-Programmbibliothek vorkompiliert und werden so von der Engine eingebunden.
+Mit integriert in die Unity-Umgebung ist Mono-Develop, eine alternative Entwicklungsumgebung für .NET-Sprachen, welche man direkt aus Unity aufrufen kann. Die Engine bietet die Möglichkeit, das Spiel direkt aus dem Editor übersetzen zu lassen. Dabei wird aus dem 3D-Viewport einfach die Spieleansicht. Das eignet sich gut für ein schnelles Ausprobieren der Szene, ist allerdings durch eine auf Debugging ausgelegte Kompilierung nicht so schnell, wie der endgültige Build. Am Ende sind die Skripte in einer eigenen .NET-Programmbibliothek vorkompiliert und werden so von der Engine eingebunden.
 
 \subsection{Unity als Engine}
 
 Unity bietet als Spiele-Engine verschiedene Mechanismen, die man bei einem Spiel benötigt. Dies ist in erster Linie eine Grafik-Engine, die die gegebenen Modelle und Texturen in ein Bild auf dem Bildschirm verwandelt. Dazu kommen Engines, die Physikberechnungen durchführen, Audio abspielen, sowie Netzwerkverbindungen für Multiplayer-Spiele bieten.\\
-Diese ganzen Engines bilden den Rahmen um das entwickelte Spiel, also die eigenen Skripte, welche das Verhalten des \textit{GameObjects} bestimmen. Dafür kann man in den Skripten bestimmte Methoden implementieren, die zu unterschiedlichen Zeitpunkten von der Engine ausgeführt werden. Die genaue Reihenfolge der Abarbeitung befindet sich in einer \hyperlink{MainLoopOrder}{Liste} weiter unten. Welche Methode welchen Zweck erfüllen soll, erkennt Unity an deren Name. 
+Diese ganzen Engines bilden den Rahmen um das entwickelte Spiel, also die eigenen Skripte, welche das Verhalten der \textit{GameObjects} bestimmen. Dafür kann man in den Skripten bestimmte Methoden implementieren, die zu unterschiedlichen Zeitpunkten von der Engine ausgeführt werden. Die genaue Reihenfolge der Abarbeitung befindet sich in einer \hyperlink{MainLoopOrder}{Liste} weiter unten. Welche Methode welchen Zweck erfüllen soll, erkennt Unity anhand des Namens. 
 
 Eine Methode die nahezu als erste ausgeführt wird, ist die \textit{Start}-Methode. Diese wird genutzt um das Skript zu initialisieren und wird einmalig nach der Erzeugung des konkreten Skript-Objekts ausgeführt.
 
@@ -125,7 +125,7 @@ public class Example : MonoBehaviour{
 
 In C\# müssen alle als Skript verwendete Klassen von \textit{MonoBehaviour} erben, um von der Engine als solche erkannt zu werden und um Zugriff auf Attribute wie \textit{transform} zu erlangen. Dieses ist eine Referenz auf die zwingend vorhandene \textit{Transform}-Komponente und lässt sich über verschiedene Methoden beeinflussen, womit man das Objekt drehen, verschieben, oder skalieren kann. Wie man in diesem Beispiel sieht, wird das Objekt bei jedem Frame um den gleichen Winkel gedreht.
 
-Weitere Methoden behandeln die Reaktion auf Events (\textit{OnTriggerEnter/Exit/Stay}) und Kollisionen (\textit{OnCollisionEnter/Exit/Stay}) mit anderen Objekten, sowie auf bestimmte Spielereingaben (z.B. \textit{OnMouseEnter} oder \textit{OnMouseOver}). Tastatureingaben müssen in der \textit{Update}-Methode behandelt werden.\\
+Weitere Methoden behandeln die Reaktion auf Events (\textit{OnTriggerEnter/Exit/Stay}) und Kollisionen (\textit{OnCollisionEnter/Exit/Stay}) mit anderen Objekten, sowie auf bestimmte Spielereingaben (z.B. \textit{OnMouseEnter} oder \textit{OnMouseOver}). Tastatureingaben müssen in der \textit{Update}-Methode behandelt werden, wie man im nachfolgenden Beispiel sieht.\\
 
 \begin{lstlisting}[caption={[Behandlung von Tastatureingaben]Behandlung von Tastatureingaben}]
 public class Example : MonoBehaviour{
@@ -137,9 +137,9 @@ public class Example : MonoBehaviour{
 }
 \end{lstlisting}
 
-\textit{GetKeyDown} liefert während des Bildes wahr, in dem der Spieler angefangen hat die entsprechende Taste zu drücken. Neben den Werten für normalen Tasten, gibt es auch Werte für Sondertasten wie zum Beispiel \textit{Windows}, sowie Maus- und Joystick-Tasten.
+\textit{GetKeyDown} liefert während des Bildes wahr, in dem der Spieler angefangen hat die entsprechende Taste zu drücken. Neben den Werten für normalen Tasten, gibt es auch Werte für Sondertasten wie zum Beispiel die \textit{Windows}-Taste, sowie Maus- und Joystick-Tasten.
 
-Eine weitere wichtige Methode ist \textit{OnGUI()}, in der Dinge implementiert werden, die in der zweidimensionalen Schicht über der 3D-Darstellung ablaufen sollen. Hier können zum Beispiel Menüs, Lebensanzeigen oder auch Munitions-Stände und sonstige Status-Elemente angezeigt werden. \textit{OnGUI} wird bei jedem GUI-Event aufgerufen, wenn zum Beispiel auf ein GUI-Element geklickt wird. Dies kann auch häufiger als der Aufruf von \textit{Update} stattfinden, weshalb diese Aktionen in \textit{OnGUI} verarbeitet werden müssen. Alle möglichen Methoden für Skripte findet man in der Sektion \textit{Overridable Functions} der offiziellen Unity-Referenz\footnote{\url{http://docs.unity3d.com/Documentation/ScriptReference/MonoBehaviour.html}}.
+Eine weitere wichtige Methode ist \textit{OnGUI()}, in der Dinge implementiert werden, die in der zweidimensionalen Schicht über der 3D-Darstellung ablaufen sollen. Hier können zum Beispiel Menüs, Lebensanzeigen oder auch Munitions-Stände und sonstige Status-Elemente angezeigt werden. \textit{OnGUI} wird bei jedem GUI-Event aufgerufen (z.B. wenn auf ein GUI-Element geklickt wird). Dies kann auch häufiger als der Aufruf von \textit{Update} stattfinden, weshalb diese Aktionen in \textit{OnGUI} verarbeitet werden müssen. Alle möglichen Methoden für Skripte findet man in der Sektion \textit{Overridable Functions} der offiziellen Unity-Referenz\footnote{\url{http://docs.unity3d.com/Documentation/ScriptReference/MonoBehaviour.html}}.
 \pagebreak
 
 \paragraph{Reihenfolge der in der Hauptschleife ausgeführten Befehle}\hypertarget{MainLoopOrder}{~}\\
